[workspace]

members = [
    "crates/bsky-rs",
    "crates/bsky-rs-models"
]

[workspace.package]
authors = ["Sumito Izumita github@smdr.io"]
edition = "2021"

[workspace.dependencies]
bsky-rs-models = { path = "crates/bsky-rs-models", version = "0.0.1" }

serde = { version = "1.0.159", features = ["derive"] }
