[package]
name = "bsky-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sumito Izumita github@smdr.io"]
description = "ATProto(Bluesky) API implementation for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsky-rs-models = { workspace = true }
